fix: cv style change

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
 <body>
     <main>
-        <div>
-<h2>Matusevich Nastassia</h2>
-<div class="main-header">
-    <div>
-        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFGZDi1Pjk6Ww/profile-displayphoto-shrink_800_800/0/1648740354208?e=1654128000&v=beta&t=rb0jIX93N8DO-3B0KTMhIx_oWl2lvn91v3kF2I0K2mw" />
-    </div>
+        <div class="main-header">
+            <div class="img">
+                <img class="round" height='200px'; src="https://media-exp1.licdn.com/dms/image/C4E03AQFGZDi1Pjk6Ww/profile-displayphoto-shrink_800_800/0/1648740354208?e=1654128000&v=beta&t=rb0jIX93N8DO-3B0KTMhIx_oWl2lvn91v3kF2I0K2mw" />
+            </div>
+
+<div >
+    <div><h2>Matusevich Nastassia</h2></div>
     <div>
         <h4>Contact information:</h4>
         <ul>
